--- a/modulo2/desafios/d010/style.css
+++ b/modulo2/desafios/d010/style.css
@@ -73,7 +73,8 @@ nav {
 nav > a {
   text-decoration: none;
   color: white;
-  padding: 10px;
+  padding: 7px;
+  padding-left: 2px;
   font-weight: 600;
   transition-duration: 400ms;
 }
