style: fix bottom scroll bar

--- a/modulo4/ex003/mq003/styles/style.css
+++ b/modulo4/ex003/mq003/styles/style.css
@@ -80,7 +80,12 @@ main p {
   text-align: justify;
   text-indent: 15px;
 }
+
 @media screen and (min-width: 768px) {
+  html {
+    width: 100%;
+  }
+
   menu {
     display: block;
   }
