--- a/modulo4/d014/styles/style.css
+++ b/modulo4/d014/styles/style.css
@@ -70,7 +70,7 @@ div#password-field {
   background-color: #5f2c82;
   border-radius: 5px;
   margin-bottom: 5px;
-  width: 230px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,6 +78,7 @@ div#password-field {
 
 input#email,
 input#password {
+  width: 100%;
   border-radius: 8px;
   height: 38px;
   background-color: #94cfcd;
@@ -95,7 +96,7 @@ span {
 }
 
 button {
-  width: 230px;
+  width: 100%;
   height: 40px;
   background: #53aaa7;
   color: white;
@@ -113,7 +114,7 @@ a.forgot-pass {
   color: #2d6462;
   border-radius: 5px;
   border: 1px solid #2d6462;
-  width: 230px;
+  width: 100%;
   height: 40px;
   display: flex;
   align-items: center;
@@ -135,15 +136,11 @@ a.forgot-pass:hover {
     background-image: linear-gradient(to bottom, #5f2c82, #49a09d);
   }
 
-  input#email,
-  input#password {
-    width: 100%;
-  }
-
   div#email-field,
   div#password-field,
   button,
-  a.forgot-pass {
+  input#email,
+  input#password a.forgot-pass {
     width: 100%;
   }
 }
